<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="apps.mfonobongumondia.com.tictactoe.Instructions">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:label="@string/instructions"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".Instructions" >


        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:textColor="#5D4037"
            android:text="@string/place_three_or_more_x_s_or_o_depending_on_the_square_grid_in_a_horizontal_vertical_or_diagonal_row"
            android:textAppearance="?android:attr/textAppearanceLarge"/>


        <TextView
            android:id="@+id/moveTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView"
            android:layout_marginTop="59dp"
            android:textColor="#5D4037"
            android:text="@string/developed_by_mfonobong_umondia_in_the_alc_2_0_climb_challenge_2018"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </RelativeLayout>
</android.support.constraint.ConstraintLayout>
